changes in slider

--- a/app/index.html
+++ b/app/index.html
@@ -48,11 +48,11 @@
     <main>
       <section id="slider">
         <p id="prev">poprzednie</p>
-      <ul>
+      <ul id="slides">
 
-        <li class="active"><img src="images/slider/zdjecie_1.jpg"></li>
-        <li class="active"><img src="images/slider/zdjecie_2.jpg"></li>
-        <li class="active"><img src="images/slider/zdjecie_3.jpg"></li>
+        <li><img src="images/slider/zdjecie_1.jpg"></li>
+        <li><img src="images/slider/zdjecie_2.jpg"></li>
+        <li><img src="images/slider/zdjecie_3.jpg"></li>
         <li><img src="images/slider/zdjecie_4.jpg"></li>
         <li><img src="images/slider/zdjecie_5.jpg"></li>
         <li><img src="images/slider/zdjecie_6.jpg"></li>
