--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
         <div class="phone_number">Numer telefonu: <span  itemprop="telephone">664 755 675</span></div>
         <div class="email">Adres e-mail: <a href="mailto:kontakt@garnituryolsztyn.pl" itemprop="email">kontakt@garnituryolsztyn.pl</a></div>
         <span class="payment" itemprop="paymentAccepted">Przyjmujemy płatności gotówką oraz kartą</span>
-        <img  itemprop="image" src="images/contact.JPG">
+        <img  itemprop="image" src="images/contact.jpg">
       </section>
     </main>
 
